--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,13 +3,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ericturnerdev.CryptsyTicker.MainActivity"
-    tools:ignore="MergeRootFrame" >
-
-    <fragment android:id="@+id/mainFragment"
-              android:name="com.ericturnerdev.CryptsyTicker.MainFragment"
-              android:layout_height="match_parent"
-              android:layout_width="match_parent"
-              />
-
-</FrameLayout>
+    tools:context="com.ericturnerdev.MySQLiteTesting.MainActivity"
+    tools:ignore="MergeRootFrame" />
