--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,11 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<GridView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/gridView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:columnWidth="120dp"
-            android:numColumns="auto_fit"
-            android:stretchMode="columnWidth">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/settingsLL"
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="#EEEEEE">
 
-</GridView>
+        <TextView
+            android:id="@+id/settingsHeading"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:textSize="35sp"
+            android:gravity="center"
+            android:text="@string/settings_heading"
+            />
+
+        <GridView
+            android:id="@+id/settingsGrid"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="8"
+            android:numColumns="3"
+            android:columnWidth="120dp"
+            android:stretchMode="columnWidth"
+            android:padding="6dp"
+            android:verticalSpacing="6dp"
+            android:horizontalSpacing="6dp"
+            android:background="#EEE"
+            >
+
+        </GridView>
+
+</LinearLayout>
