--- a/app/src/main/res/layout/fragment_indiv_chart.xml
+++ b/app/src/main/res/layout/fragment_indiv_chart.xml
@@ -1,10 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/fragment_indiv_chart"
-              android:orientation="vertical"
+              android:id="@+id/fragment_indiv_chart_LL"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="#FFFFFF">
+              android:background="#555555"
+              android:orientation="vertical">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:id="@+id/fragment_indiv_chart_TV"/>
+
+    <FrameLayout
+        android:id="@+id/fragment_indiv_chart_FF"
+        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_weight="5"
+        />
 
 </LinearLayout>
