--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,6 +4,7 @@
              android:id="@+id/activity_settings_base"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
+             android:background="#888888"
     >
 
     <fragment
