--- a/app/src/main/res/layout/fragment_main2.xml
+++ b/app/src/main/res/layout/fragment_main2.xml
@@ -4,7 +4,7 @@
           android:id="@+id/fragment_list_view"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          android:background="#eaeaea"
+          android:background="#888888"
           android:divider="@android:color/transparent"
           android:dividerHeight="10dp"
           android:scrollbarStyle="outsideOverlay"
