--- a/app/src/main/res/layout/settings_item.xml
+++ b/app/src/main/res/layout/settings_item.xml
@@ -4,50 +4,52 @@
               android:id="@+id/settingsItem"
               android:orientation="horizontal"
               android:layout_width="match_parent"
-              android:layout_height="match_parent" >
+              android:layout_height="match_parent"
+              android:background="@drawable/pair_shape">
 
-    <LinearLayout android:layout_width="0dp"
-                  android:layout_height="match_parent"
-                  android:layout_weight="5"
-                  android:orientation="vertical"
-                  android:background="#FFF"
-                  android:minHeight="30dp"
-                  android:padding="6dp">
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="9"
+        android:orientation="vertical"
+        android:padding="6dp"
+        android:gravity="center">
 
         <TextView
             android:id="@+id/settingsItemTopBuffer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="3"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textStyle="bold"
-            android:background="#FFF"/>
+            android:gravity="center"/>
 
         <TextView
             android:id="@+id/settingsItemTV"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textStyle="bold"
-            android:background="#FFF"/>
+            android:gravity="center"
+            />
 
         <TextView
             android:id="@+id/settingsItemTV2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:textSize="20sp"
-            android:background="#FFF"/>
+            android:textSize="18sp"
+            android:gravity="center"
+            />
 
-                  </LinearLayout>
+    </LinearLayout>
 
     <CheckBox
         android:id="@+id/settingsItemCheckBox"
         android:layout_height="match_parent"
         android:layout_width="0dp"
-        android:layout_weight="2"
-        android:background="#FFF"
+        android:layout_weight="3"
         android:gravity="center"
         android:minHeight="35dp"/>
 
