Graphs changed, ListView item click animation added

--- a/app/src/main/res/layout/fragment_main2.xml
+++ b/app/src/main/res/layout/fragment_main2.xml
@@ -9,6 +9,7 @@
           android:dividerHeight="10dp"
           android:scrollbarStyle="outsideOverlay"
           android:clickable="true"
+          android:listSelector="@drawable/item_pressed"
     >
 
 </ListView>
