--- a/app/src/main/res/layout/pair_item_view.xml
+++ b/app/src/main/res/layout/pair_item_view.xml
@@ -5,7 +5,7 @@
                 android:layout_height="match_parent"
                 tools:context="com.ericturner.cryptoticker.MainActivity"
                 tools:ignore="MergeRootFrame"
-                android:background="@drawable/pair_shape"
+                android:background="@drawable/item_pressed"
     >
 
     <LinearLayout
@@ -56,12 +56,13 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:textStyle="bold"
             android:textSize="22sp"
+            android:paddingRight="0dp"
             android:paddingLeft="20dp"
 
 
             />
+
 
         <TextView
             android:id="@+id/top_tv2"
