--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,7 @@
         <item name="android:layout_height">0dp</item>
         <item name="android:layout_weight">1</item>
         <item name="android:padding">2dp</item>
+        <item name="android:gravity">center</item>
 
     </style>
 
@@ -21,6 +22,7 @@
         <item name="android:layout_weight">40</item>
         <item name="android:background">#FFFFFF</item>
         <item name="android:text">test1</item>
+        <item name="android:gravity">center</item>
 
     </style>
 
@@ -30,6 +32,7 @@
         <item name="android:layout_weight">20</item>
         <item name="android:background">#FFFFFF</item>
         <item name="android:text">test2</item>
+        <item name="android:gravity">center</item>
     </style>
 
     <style name="text_style3">
