--- a/app/src/main/res/layout/pair_item_view.xml
+++ b/app/src/main/res/layout/pair_item_view.xml
@@ -52,7 +52,7 @@
 
         <TextView
             android:id="@+id/top_tv1"
-            android:text="Is it up or down?"
+            android:text="Price"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
