--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,7 +21,7 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_weight">40</item>
         <item name="android:background">#FFFFFF</item>
-        <item name="android:text">test1</item>
+        <item name="android:text">no data</item>
         <item name="android:gravity">center</item>
 
     </style>
@@ -31,7 +31,7 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_weight">20</item>
         <item name="android:background">#FFFFFF</item>
-        <item name="android:text">test2</item>
+        <item name="android:text">no data</item>
         <item name="android:gravity">center</item>
     </style>
 
@@ -40,7 +40,7 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_weight">40</item>
         <item name="android:background">#FFFFFF</item>
-        <item name="android:text">test1</item>
+        <item name="android:text">no data</item>
         <item name="android:textStyle">bold</item>
         <item name="android:gravity">center</item>
 
@@ -51,7 +51,7 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_weight">20</item>
         <item name="android:background">#FFFFFF</item>
-        <item name="android:text">test2</item>
+        <item name="android:text">no data</item>
         <item name="android:textStyle">bold</item>
         <item name="android:gravity">center</item>
 
