--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,7 +8,7 @@
     >
 
     <fragment
-        android:name="com.ericturnerdev.CryptsyTicker.SettingsFragment"
+        android:name="com.ericturnerdev.Altcoin.SettingsFragment"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         />
