--- a/app/src/main/res/layout/settings_item.xml
+++ b/app/src/main/res/layout/settings_item.xml
@@ -12,7 +12,8 @@
         android:layout_height="match_parent"
         android:layout_weight="9"
         android:orientation="vertical"
-        android:padding="6dp"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
         android:gravity="center">
 
         <TextView
