--- a/app/src/main/res/layout/settings_item.xml
+++ b/app/src/main/res/layout/settings_item.xml
@@ -2,28 +2,45 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/settingsItem"
-              android:orientation="horizontal"
+              android:orientation="vertical"
+              android:minHeight="90dp"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@drawable/pair_shape">
+              android:background="@drawable/pair_shape"
+              android:descendantFocusability="blocksDescendants">
+
+    <TextView
+        android:id="@+id/settingsCoinName"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:paddingLeft="2dp"
+        android:paddingRight="2dp"
+        android:paddingTop="2dp"
+        android:layout_weight="2.2"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:textColor="#555555"
+        android:gravity="center"/>
+
+
+    <LinearLayout android:id="@+id/settingsHoriz"
+                  android:layout_width="match_parent"
+                  android:layout_height="0dp"
+                  android:layout_weight="6"
+                  android:background="@drawable/pair_shape"
+                  android:orientation="horizontal">
+
+
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="9"
         android:orientation="vertical"
-        android:paddingTop="6dp"
-        android:paddingBottom="6dp"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
         android:gravity="center">
 
-        <TextView
-            android:id="@+id/settingsItemTopBuffer"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:gravity="center"/>
 
         <TextView
             android:id="@+id/settingsItemTV"
@@ -46,12 +63,17 @@
 
     </LinearLayout>
 
+
     <CheckBox
         android:id="@+id/settingsItemCheckBox"
         android:layout_height="match_parent"
+        android:focusable="false"
         android:layout_width="0dp"
         android:layout_weight="4"
+        android:clickable="false"
         android:gravity="center"
         android:minHeight="35dp"/>
+
+    </LinearLayout>
 
 </LinearLayout>
